--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ list(APPEND SOURCES
 
     # project core sources
     src/core/resource_manager.cpp
+    src/core/ui_manager.cpp
 
     # project rendering sources
     src/rendering/renderer.cpp
