--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ list(APPEND SOURCES
     src/rendering/shader_uniform.cpp
     src/rendering/shader.cpp
     src/rendering/texture.cpp
-    src/rendering/model.cpp
+    src/rendering/mesh.cpp
 )
 
 add_executable(ModelViewer src/program.cpp)
