--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "libs/stb"]
 	path = libs/stb
 	url = https://github.com/nothings/stb
+[submodule "libs/pfd"]
+	path = libs/pfd
+	url = https://github.com/samhocevar/portable-file-dialogs
