Build system fixes
Changed all paths in the code to be relative to the executable

Moved all internal essential resources to a special folder

The internal resources folder gets copied during build so that it's always in the same folder as the executable

Fixed build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,12 @@ endif()
 project(ModelViewer LANGUAGES C CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release/")
+
+file(COPY res/internal DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/res")
+file(COPY res/internal DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/res")
+file(COPY res/internal DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/res")
 
 # Find OpenGL
 find_package(OpenGL REQUIRED)
@@ -25,7 +31,6 @@ list(APPEND INCLUDES
     libs/glfw/include
     libs/glad/include
     libs/glm/
-    libs/freetype/include
     libs/imgui/
     libs/tinyobjloader/
 
@@ -62,7 +67,7 @@ set_target_properties(ModelViewer PROPERTIES
 OUTPUT_NAME ModelViewer 
 CXX_STANDARD 17)
 
-target_link_libraries(ModelViewer OpenGL::GL glfw freetype)
+target_link_libraries(ModelViewer OpenGL::GL glfw)
 
 target_include_directories(ModelViewer PRIVATE ${INCLUDES})
 target_sources(ModelViewer PRIVATE ${SOURCES})
